freest/test/prog/Invalid/SessionTypes/ReceiveOnOutChannel/ReceiveOnOutChannel.fst
module ReceiveOnOutChannel where

f : !Int -> (Int, Skip)
f c = receive c

